<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Android - Contactos</string>
    <string name="txtContactos">Contactos</string>
	<string name="txtTelefono">Telefono</string>
	<string name="txtEmail">Email</string>
	<string name="order">Ordenar</string>
	<string name="filter">Filtro</string>
	<string name="newMessages"> mensajes web nuevos</string>
	<string name="newMessagesTitle">Tienes mensajes web</string>
	<string name="message">Mensaje</string>
	<string name="send">Enviar</string>
	<string name="login">Iniciar Sesión</string>
	<string name="register">Registrar</string>
	<string name="sendFail">Error de Envío!</string>
	<string name="sendOk">Envio Correcto!</string>
	<string name="Ascendent">Ascendente</string>
	<string name="Descendent">Descendente</string>
	<string name="all">Todos</string>
	<string name="outbound">Salientes</string>
	<string name="inbound">Entrantes</string>
	<string name="missed">Perdidas</string>
	<string name="orderContact">Contactos</string>
	<string name="orderContactSummary">Ordenar Contactos por nombre</string>
	<string name="orderCalls">Llamadas</string>
	<string name="orderCallsSummary">Ordenar Llamadas por fecha</string>
	<string name="orderMsgWeb">Mensaje Web</string>
	<string name="orderMsgWebSummary">Ordenar Mensaje Web por fecha</string>
	<string name="filterCalls">Llamadas</string>
	<string name="filterCallsSummary">Filtrar Llamadas</string>
	<string name="filterMsg">Mensajes</string>
	<string name="filterMsgSummary">Filtrar Mensajes</string>
	<string name="filterMsgWeb">Mensajes Web</string>
	<string name="filterMsgWebSummary">Filtrar Mensajes Web</string>
	<string name="orderMsg">Mensajes</string>
	<string name="orderMsgSummary">Ordenar Mensaje por fecha</string>
	<string name="options">Opciones</string>
	<string name="webService">Mensaje Web</string>
	<string name="user">Usuario</string>
	<string name="password">Contraseña</string>
	<string name="confirmPassword">Contraseña</string>
	<string name="refreshmsgweb">Actualizar</string>
	<string name="sendMsgWeb">Enviar Mensaje Web</string>
	<string name="createWebMailUser">Nuevo Usuario</string>
	<string name="associateWebUser">Aceptar</string>
    <string name="mensajeDatosIncorrectos">Los datos ingresados son incorrectos</string>
    <string name="mensajeDatosIncompletos">El nombre de usuario y la contraseña deben tener mas de 4 caracteres</string>
    <string name="mensajeDatosDuplicados">El usuario ya existe</string>
    <string name="mensajeDatosNoConcuerdan">Las contraseñas ingresadas no concuerdan</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Aceptar</string>
    <string name="end">Finalizar</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="conectividad">Conectividad</string>
</resources>
