<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content">
	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="8sp"
	android:orientation="horizontal">
		<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:text="@string/message"/>
	
	</LinearLayout>
	<EditText android:id="@+id/txtMessageWeb" 
	android:textSize="14sp"
	android:textStyle="bold"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:gravity="center_horizontal"/>

	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
		<Button
		android:id="@+id/btmSendWebMessage"
		android:text="@string/send"
		android:layout_width="100sp"
		android:layout_height="wrap_content"/>
		<Button
		android:text="@string/cancel"
		android:id="@+id/btmCancelMessage"
		android:layout_width="100sp"
		android:layout_height="wrap_content"/>
	</LinearLayout>		
</LinearLayout>