<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:gravity="center_vertical|center_horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content">
	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="8sp"
	android:layout_marginBottom="2sp"
	android:orientation="horizontal">
		<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:text="@string/createWebMailUser"/>
	
	</LinearLayout>
	<EditText 
	android:id="@+id/txtUserName" 
	android:textSize="14sp"
	android:textStyle="bold"
	android:singleLine="true"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:layout_margin="2sp"
	android:gravity="center_horizontal"/>

	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="center_horizontal"
	android:orientation="horizontal">
		<Button
		android:id="@+id/btmCreateWebUser"
		android:text="@string/associateWebUser"
		android:layout_width="100sp"
		android:layout_height="wrap_content"/>
		<Button
		android:text="@string/cancel"
		android:id="@+id/btmCancelAssociation"
		android:layout_width="100sp"
		android:layout_height="wrap_content"/>
	</LinearLayout>		
</LinearLayout>