<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="center_vertical|center_horizontal"
android:background="@drawable/android3">
	<LinearLayout
	android:gravity="center_horizontal"
	android:layout_width="wrap_content"
	android:orientation="vertical"
	android:layout_height="wrap_content">
		<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="5sp"
		android:gravity="center_vertical|center_horizontal">
			<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="left">
				<TextView 
				android:layout_width="wrap_content"
				android:text="@string/user"  
				android:layout_height="wrap_content" 
				android:maxLines="1"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginBottom="5sp"
				android:textColor="@color/white"/>
				<TextView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/password" 
				android:maxLines="1"	
				android:textSize="20sp"
				android:layout_marginTop="5sp"
				android:textStyle="bold"
				android:layout_weight="1"
				android:textColor="@color/white"/>
			</LinearLayout>
			<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginLeft="2sp"
			android:gravity="center_vertical|center_horizontal">
				<EditText android:layout_width="150sp"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:layout_weight="1"
				android:id="@+id/txtUser"/>
				<EditText android:layout_width="150sp"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:layout_weight="1"
				android:inputType="textPassword"
				android:id="@+id/txtPassword"/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="10sp"
		android:gravity="center_horizontal">
			<Button android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/login" 
			android:layout_marginRight="4sp"
			android:background="@drawable/custom_button"
			android:textColor="@color/white"
			android:id="@+id/btmLogin"/> 		
			<Button android:layout_width="wrap_content" 
		    android:layout_marginLeft="4sp"
			android:layout_height="wrap_content"
			android:text="@string/register" 
			android:background="@drawable/custom_button"
			android:textColor="@color/white"
			android:id="@+id/btmRegister"/> 		
		</LinearLayout>		
	</LinearLayout>
</LinearLayout>